resolve: white blank space in dark mode

--- a/client/src/components/navbar/navBar.scss
+++ b/client/src/components/navbar/navBar.scss
@@ -6,7 +6,7 @@
     align-items: center;
     justify-content: space-between;
     padding: 10px 20px;
-    height: 50px;
+    height: 70px;
     border-bottom: 1px solid themed("border");
     position: sticky;
     top: 0;
